# spconv_cpp

./: .gitignore  HOW_TO_UPDATE.md  README.md
spconv/: CMakeLists.txt
spconv/cmake/: Packing.cmake  spconvConfig.cmake.in
spconv/src/spconvlib/cumm/common/CompileInfo/: CompileInfo_arch_is_compiled.cc  CompileInfo_arch_is_compiled_gemm.cc  CompileInfo_get_compiled_cuda_arch.cc  CompileInfo_get_compiled_gemm_cuda_arch.cc
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A0T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv/src/spconvlib/cumm/conv/main/ConvMainUnitTest/: CMakeLists.txt
spconv/src/spconvlib/cumm/gemm/main/GemmMainUnitTest/: CMakeLists.txt
spconv/src/spconvlib/spconv/csrc/sparse/convops/convops/ConvTunerSimple/: CMakeLists.txt
(+754 files in other folders)
